; ModuleID = '/home/carl/AnghaBench/Cinder/src/freetype/otvalid/extr_otvgpos.c_otv_value_length.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/freetype/otvalid/extr_otvgpos.c_otv_value_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @otv_value_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @otv_value_length(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = and i32 %4, 170
  %6 = ashr i32 %5, 1
  %7 = load i32, i32* %2, align 4
  %8 = and i32 %7, 85
  %9 = add nsw i32 %6, %8
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, 204
  %12 = ashr i32 %11, 2
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 51
  %15 = add nsw i32 %12, %14
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %16, 240
  %18 = ashr i32 %17, 4
  %19 = load i32, i32* %3, align 4
  %20 = and i32 %19, 15
  %21 = add nsw i32 %18, %20
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = mul nsw i32 %22, 2
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
